--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,16 @@
 STRING = mongodb+srv://karthikr:admin@cluster0.xvrddw5.mongodb.net/?retryWrites=true&w=majority
 DATABASE_NAME = Vaidhya
 COLLECTION_LOGIN = login
+COLLECTION_DATA = data
+
+[OPENAI]
+OPENAIAPIKEY = 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
+
+[EMAIL]
+SENDER_EMAIL = karthikr070605@gmail.com
+SENDER_PASSWORD = ucpconxgfbqahdtp
+RECEIVER_EMAIL = betawebsoft@gmail.com
+
+[URL]
+TRANSLATE_URL = http://49bd-35-201-201-181.ngrok-free.app/
+CHATBOT_URL = http://d3b4-34-87-65-34.ngrok-free.app/
