--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 STRING = mongodb+srv://karthikr:admin@cluster0.xvrddw5.mongodb.net/?retryWrites=true&w=majority
 DATABASE_NAME = Vaidhya
 COLLECTION_LOGIN = login
+COLLECTION_DOCTOR_LOGIN = doctor_login
 COLLECTION_DATA = data
 
 [OPENAI]
