--- a/config.ini
+++ b/config.ini
@@ -14,5 +14,5 @@ SENDER_PASSWORD = ucpconxgfbqahdtp
 RECEIVER_EMAIL = betawebsoft@gmail.com
 
 [URL]
-TRANSLATE_URL = http://49bd-35-201-201-181.ngrok-free.app/
+TRANSLATE_URL = http://127.0.0.1:5000/
 CHATBOT_URL = http://d3b4-34-87-65-34.ngrok-free.app/
