--- a/config.ini
+++ b/config.ini
@@ -15,4 +15,5 @@ RECEIVER_EMAIL = betawebsoft@gmail.com
 
 [URL]
 TRANSLATE_URL = http://127.0.0.1:5000/
-CHATBOT_URL = http://d3b4-34-87-65-34.ngrok-free.app/
+CHATBOT_URL = https://copy-shadows-domestic-sussex.trycloudflare.com/
+CHATBOT_URL_DEMO = http://d3b4-34-87-65-34.ngrok-free.app/
