implemented appointment system

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,14 @@
 [DATABASE]
 STRING = mongodb+srv://karthikr:admin@cluster0.xvrddw5.mongodb.net/?retryWrites=true&w=majority
 DATABASE_NAME = Vaidhya
-COLLECTION_LOGIN = login
+COLLECTION_PATIENT_LOGIN = patient_login
 COLLECTION_DOCTOR_LOGIN = doctor_login
 COLLECTION_DATA = data
+COLLECTION_APPOINTMENT_STATUS = appointment_status
+COLLECTION_APPOINTMENT = appointment
+COLLECTION_PATIENT_INFORMATION = patient_info
+COLLECTION_DOCTOR_INFORMATION = doctor_info
+COLLECTION_CONSULTATION = consultation
 
 [OPENAI]
 OPENAIAPIKEY = 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
