--- a/config.ini
+++ b/config.ini
@@ -22,3 +22,6 @@ RECEIVER_EMAIL = betawebsoft@gmail.com
 TRANSLATE_URL = https://legitimate-instantly-destination-circus.trycloudflare.com/
 CHATBOT_URL = https://compilation-fall-magnificent-ah.trycloudflare.com/
 CHATBOT_URL_DEMO = http://d3b4-34-87-65-34.ngrok-free.app/
+
+[SECRETS]
+APP_SECRET_KEY = 8-3uzN@5t%%W&2*Z4r6v9y$B?EH+MbQe
