--- a/config.ini
+++ b/config.ini
@@ -14,8 +14,8 @@ COLLECTION_CONSULTATION = consultation
 OPENAIAPIKEY = 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
 
 [EMAIL]
-SENDER_EMAIL = karthikr070605@gmail.com
-SENDER_PASSWORD = ucpconxgfbqahdtp
+SENDER_EMAIL = vaidhya.co@gmail.com
+SENDER_PASSWORD = qeqz dcjn bzkt sgmw
 RECEIVER_EMAIL = betawebsoft@gmail.com
 
 [URL]
