--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,7 @@ COLLECTION_APPOINTMENT = appointment
 COLLECTION_PATIENT_INFORMATION = patient_info
 COLLECTION_DOCTOR_INFORMATION = doctor_info
 COLLECTION_CONSULTATION = consultation
+OTP = otp
 
 [OPENAI]
 OPENAIAPIKEY = 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
