Implemented Patient details collection

--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@ COLLECTION_PATIENT_INFORMATION = patient_info
 COLLECTION_DOCTOR_INFORMATION = doctor_info
 COLLECTION_CONSULTATION = consultation
 OTP = otp
+NUMBERS = numbers
 
 [OPENAI]
 OPENAIAPIKEY = sk-proj-jWeDdGukH4bdGpXgD0P0T3BlbkFJKRuKOMe7JfRY7m7ZoWRi
