Implemented Description Feel using Mistral 7B Instruct. Removed the prsence of OpenAI.

--- a/config.ini
+++ b/config.ini
@@ -12,9 +12,6 @@ COLLECTION_CONSULTATION = consultation
 OTP = otp
 NUMBERS = numbers
 
-[OPENAI]
-OPENAIAPIKEY = sk-proj-jWeDdGukH4bdGpXgD0P0T3BlbkFJKRuKOMe7JfRY7m7ZoWRi
-
 [EMAIL]
 SENDER_EMAIL = vaidhya.co@gmail.com
 SENDER_PASSWORD = qeqz dcjn bzkt sgmw
@@ -23,7 +20,7 @@ RECEIVER_EMAIL = betawebsoft@gmail.com
 [URL]
 TRANSLATE_URL = https://contemporary-northeast-airports-diary.trycloudflare.com/
 CHATBOT_URL = https://saddam-off-enters-henderson.trycloudflare.com/
-CHATBOT_URL_DEMO = http://d3b4-34-87-65-34.ngrok-free.app/
+FEEL_URL = https://land-gig-world-shop.trycloudflare.com/
 
 [SECRETS]
 APP_SECRET_KEY = 8-3uzN@5t%%W&2*Z4r6v9y$B?EH+MbQe
