--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,7 @@ RECEIVER_EMAIL = betawebsoft@gmail.com
 [URL]
 TRANSLATE_URL = https://contemporary-northeast-airports-diary.trycloudflare.com/
 CHATBOT_URL = https://saddam-off-enters-henderson.trycloudflare.com/
-FEEL_URL = https://land-gig-world-shop.trycloudflare.com/
+FEEL_URL = https://tragedy-attorneys-robot-babes.trycloudflare.com/
 
 [SECRETS]
 APP_SECRET_KEY = 8-3uzN@5t%%W&2*Z4r6v9y$B?EH+MbQe
