--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ SENDER_PASSWORD = qeqz dcjn bzkt sgmw
 RECEIVER_EMAIL = betawebsoft@gmail.com
 
 [URL]
-TRANSLATE_URL = https://contemporary-northeast-airports-diary.trycloudflare.com/
+TRANSLATE_URL = https://o-regime-hills-pgp.trycloudflare.com/
 CHATBOT_URL = https://setting-leasing-instant-finding.trycloudflare.com/
 FEEL_URL = https://tragedy-attorneys-robot-babes.trycloudflare.com/
 
