--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [DATABASE]
-STRING = mongodb+srv://karthikr:admin@cluster0.xvrddw5.mongodb.net/?retryWrites=true&w=majority
+STRING = <MongoDB connection string>
 DATABASE_NAME = Vaidhya
 COLLECTION_PATIENT_LOGIN = patient_login
 COLLECTION_DOCTOR_LOGIN = doctor_login
@@ -13,14 +13,14 @@ OTP = otp
 NUMBERS = numbers
 
 [EMAIL]
-SENDER_EMAIL = vaidhya.co@gmail.com
-SENDER_PASSWORD = qeqz dcjn bzkt sgmw
-RECEIVER_EMAIL = betawebsoft@gmail.com
+SENDER_EMAIL = <Sender Mail ID>
+SENDER_PASSWORD = <Sender App Password>
+RECEIVER_EMAIL = <Receiver Email to Get Emails>
 
 [URL]
-TRANSLATE_URL = https://o-regime-hills-pgp.trycloudflare.com/
-CHATBOT_URL = https://setting-leasing-instant-finding.trycloudflare.com/
-FEEL_URL = https://tragedy-attorneys-robot-babes.trycloudflare.com/
+TRANSLATE_URL = <Endpoint for Translation>
+CHATBOT_URL = <Endpoint for Chatbot>
+FEEL_URL = <Endpoint for Feels>
 
 [SECRETS]
-APP_SECRET_KEY = 8-3uzN@5t%%W&2*Z4r6v9y$B?EH+MbQe
+APP_SECRET_KEY = <Flask Secret Key>
